force-app/main/default/objects/Reverse_Redeemed_Vouchers__e/Reverse_Redeemed_Vouchers__e.object-meta.xml
<CustomObject>
    <label>Reverse Redeemed Vouchers</label>
    <pluralLabel>Reverse Redeemed Vouchers</pluralLabel>
</CustomObject>