force-app/main/default/objects/Reverse_Redeemed_Vouchers__e/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>18</length>
    <type>Text</type>
</CustomField>