force-app/main/default/objects/Reverse_Redeemed_Vouchers__e/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <label>MemberId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>