force-app/main/default/objects/Reverse_Redeemed_Vouchers__e/fields/OriginalOrderId__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderId__c</fullName>
    <label>OriginalOrderId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>